# PyTT2000

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/PyTT2000/: __init__.py  tt2k.py
tests/: test_values.py
